<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chats">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.messanger.ui.fragments.ChatsFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chats" >
        <action
            android:id="@+id/action_navigation_chats_to_navigation_chat2"
            app:destination="@id/navigation_chat"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.messanger.ui.fragments.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.messanger.ui.fragments.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.messanger.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_left" />
    </fragment>
    <fragment
        android:id="@+id/regFragment"
        android:name="com.example.messanger.ui.fragments.auth.RegFragment"
        android:label="@string/reqTitle"
        tools:layout="@layout/fragment_reg" >
        <action
            android:id="@+id/action_regFragment_to_navigation_chats"
            app:destination="@id/navigation_chats"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_left" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.messanger.ui.fragments.auth.LoginFragment"
        android:label="@string/loginTitle"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_regFragment"
            app:destination="@id/regFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_left" />
        <action
            android:id="@+id/action_loginFragment_to_navigation_chats"
            app:destination="@id/navigation_chats"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_left" />
    </fragment>
    <fragment
        android:id="@+id/viewPager2Fragment"
        android:name="com.example.messanger.ui.fragments.auth.ViewPager2Fragment"
        android:label="@string/authTitle"
        tools:layout="@layout/fragment_view_pager2" />
</navigation>